// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toOpenApi should convert to openapi 1`] = `
{
  "components": undefined,
  "info": {
    "title": "My API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "post": {
        "description": "Create a user",
        "operationId": "createUser",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to create",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Create a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "description": "Delete a user",
        "operationId": "deleteUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": undefined,
              },
            },
            "description": "Success",
          },
        },
        "summary": "Delete a user",
        "tags": [
          "users",
        ],
      },
      "get": {
        "description": "Get a user by id",
        "operationId": "getUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Get a user by id",
        "tags": [
          "users",
        ],
      },
      "put": {
        "description": "Update a user",
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "id": {
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to update",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Update a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users?filter={filter}#fragment": {
      "get": {
        "description": "Get all users",
        "operationId": "getUsers",
        "parameters": [
          {
            "in": "path",
            "name": "filter",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "Limit the number of users",
            "in": "query",
            "name": "limit",
            "required": true,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
          {
            "description": "Offset the number of users",
            "in": "query",
            "name": "offset",
            "required": false,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "additionalProperties": false,
                    "properties": {
                      "email": {
                        "format": "email",
                        "type": "string",
                      },
                      "id": {
                        "type": "string",
                      },
                      "name": {
                        "type": "string",
                      },
                    },
                    "required": [
                      "id",
                      "name",
                      "email",
                    ],
                    "type": "object",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "enum": [
                        "No users found",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No users found",
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default error",
          },
        },
        "summary": "Get all users",
        "tags": [
          "users",
        ],
      },
    },
  },
  "security": undefined,
  "servers": undefined,
}
`;

exports[`toOpenApi should convert to openapi with basic auth 1`] = `
{
  "components": {
    "securitySchemes": {
      "auth": {
        "scheme": "basic",
        "type": "http",
      },
    },
  },
  "info": {
    "title": "My Basic API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "post": {
        "description": "Create a user",
        "operationId": "createUser",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to create",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Create a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "description": "Delete a user",
        "operationId": "deleteUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": undefined,
              },
            },
            "description": "Success",
          },
        },
        "summary": "Delete a user",
        "tags": [
          "users",
        ],
      },
      "get": {
        "description": "Get a user by id",
        "operationId": "getUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Get a user by id",
        "tags": [
          "users",
        ],
      },
      "put": {
        "description": "Update a user",
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "id": {
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to update",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Update a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users?filter={filter}#fragment": {
      "get": {
        "description": "Get all users",
        "operationId": "getUsers",
        "parameters": [
          {
            "in": "path",
            "name": "filter",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "Limit the number of users",
            "in": "query",
            "name": "limit",
            "required": true,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
          {
            "description": "Offset the number of users",
            "in": "query",
            "name": "offset",
            "required": false,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "additionalProperties": false,
                    "properties": {
                      "email": {
                        "format": "email",
                        "type": "string",
                      },
                      "id": {
                        "type": "string",
                      },
                      "name": {
                        "type": "string",
                      },
                    },
                    "required": [
                      "id",
                      "name",
                      "email",
                    ],
                    "type": "object",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "enum": [
                        "No users found",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No users found",
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default error",
          },
        },
        "summary": "Get all users",
        "tags": [
          "users",
        ],
      },
    },
  },
  "security": [
    {
      "auth": [],
    },
  ],
  "servers": undefined,
}
`;

exports[`toOpenApi should convert to openapi with bearer auth 1`] = `
{
  "components": {
    "securitySchemes": {
      "auth": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
    },
  },
  "info": {
    "title": "My Bearer API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "post": {
        "description": "Create a user",
        "operationId": "createUser",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to create",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Create a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "description": "Delete a user",
        "operationId": "deleteUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": undefined,
              },
            },
            "description": "Success",
          },
        },
        "summary": "Delete a user",
        "tags": [
          "users",
        ],
      },
      "get": {
        "description": "Get a user by id",
        "operationId": "getUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Get a user by id",
        "tags": [
          "users",
        ],
      },
      "put": {
        "description": "Update a user",
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "id": {
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to update",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Update a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users?filter={filter}#fragment": {
      "get": {
        "description": "Get all users",
        "operationId": "getUsers",
        "parameters": [
          {
            "in": "path",
            "name": "filter",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "Limit the number of users",
            "in": "query",
            "name": "limit",
            "required": true,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
          {
            "description": "Offset the number of users",
            "in": "query",
            "name": "offset",
            "required": false,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "additionalProperties": false,
                    "properties": {
                      "email": {
                        "format": "email",
                        "type": "string",
                      },
                      "id": {
                        "type": "string",
                      },
                      "name": {
                        "type": "string",
                      },
                    },
                    "required": [
                      "id",
                      "name",
                      "email",
                    ],
                    "type": "object",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "enum": [
                        "No users found",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No users found",
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default error",
          },
        },
        "summary": "Get all users",
        "tags": [
          "users",
        ],
      },
    },
  },
  "security": [
    {
      "auth": [],
    },
  ],
  "servers": undefined,
}
`;

exports[`toOpenApi should convert to openapi with oauth2 auth 1`] = `
{
  "components": {
    "securitySchemes": {
      "auth": {
        "flows": {
          "implicit": {
            "authorizationUrl": "https://example.com/oauth2/authorize",
            "scopes": {
              "read": "Read access",
              "write": "Write access",
            },
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": {
    "title": "My OAuth2 API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "post": {
        "description": "Create a user",
        "operationId": "createUser",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to create",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Create a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "description": "Delete a user",
        "operationId": "deleteUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": undefined,
              },
            },
            "description": "Success",
          },
        },
        "summary": "Delete a user",
        "tags": [
          "users",
        ],
      },
      "get": {
        "description": "Get a user by id",
        "operationId": "getUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Get a user by id",
        "tags": [
          "users",
        ],
      },
      "put": {
        "description": "Update a user",
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "id": {
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to update",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Update a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users?filter={filter}#fragment": {
      "get": {
        "description": "Get all users",
        "operationId": "getUsers",
        "parameters": [
          {
            "in": "path",
            "name": "filter",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "Limit the number of users",
            "in": "query",
            "name": "limit",
            "required": true,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
          {
            "description": "Offset the number of users",
            "in": "query",
            "name": "offset",
            "required": false,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "additionalProperties": false,
                    "properties": {
                      "email": {
                        "format": "email",
                        "type": "string",
                      },
                      "id": {
                        "type": "string",
                      },
                      "name": {
                        "type": "string",
                      },
                    },
                    "required": [
                      "id",
                      "name",
                      "email",
                    ],
                    "type": "object",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "enum": [
                        "No users found",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No users found",
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default error",
          },
        },
        "summary": "Get all users",
        "tags": [
          "users",
        ],
      },
    },
  },
  "security": [
    {
      "auth": [],
    },
  ],
  "servers": undefined,
}
`;

exports[`toOpenApi should convert to openapi with prefix 1`] = `
{
  "components": undefined,
  "info": {
    "title": "My Prefixed API",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "post": {
        "description": "Create a user",
        "operationId": "createUser",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to create",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Create a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users/{id}": {
      "delete": {
        "description": "Delete a user",
        "operationId": "deleteUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": undefined,
              },
            },
            "description": "Success",
          },
        },
        "summary": "Delete a user",
        "tags": [
          "users",
        ],
      },
      "get": {
        "description": "Get a user by id",
        "operationId": "getUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Get a user by id",
        "tags": [
          "users",
        ],
      },
      "put": {
        "description": "Update a user",
        "operationId": "updateUser",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "type": "string",
                  },
                  "id": {
                    "type": "string",
                  },
                  "name": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "The user to update",
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "email": {
                      "format": "email",
                      "type": "string",
                    },
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "name",
                    "email",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Update a user",
        "tags": [
          "users",
        ],
      },
    },
    "/users?filter={filter}#fragment": {
      "get": {
        "description": "Get all users",
        "operationId": "getUsers",
        "parameters": [
          {
            "in": "path",
            "name": "filter",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "Limit the number of users",
            "in": "query",
            "name": "limit",
            "required": true,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
          {
            "description": "Offset the number of users",
            "in": "query",
            "name": "offset",
            "required": false,
            "schema": {
              "exclusiveMinimum": true,
              "minimum": 0,
              "type": "number",
            },
          },
        ],
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "additionalProperties": false,
                    "properties": {
                      "email": {
                        "format": "email",
                        "type": "string",
                      },
                      "id": {
                        "type": "string",
                      },
                      "name": {
                        "type": "string",
                      },
                    },
                    "required": [
                      "id",
                      "name",
                      "email",
                    ],
                    "type": "object",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "enum": [
                        "No users found",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No users found",
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default error",
          },
        },
        "summary": "Get all users",
        "tags": [
          "users",
        ],
      },
    },
  },
  "security": undefined,
  "servers": [
    {
      "url": "/api/v1",
    },
  ],
}
`;
